--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1> Jigeesha Sanjeev Jain </h1>
         <p><em> Welcome to my website </em></p>
-        <strong>CEO of <a href="https://www.google.com/">Google</a></strong>
+        <strong>Master Student at <a href="https://www.binghamton.edu/">Binghamton University </a></strong>
       </td>
     </tr>
   </table>
@@ -51,11 +51,11 @@
     <tbody>
       <tr>
         <td>SQL </td>
-        <td>⭐⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Tableau </td>
-        <td>⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐⭐</td>
 
       </tr>
       <tr>
