--- a/Contact details.html
+++ b/Contact details.html
@@ -7,7 +7,7 @@
   <body>
     <ul>
     <li><em>Mobile number: (123) 456 7890 </em></li>
-    <li>Address: 221B Baker Street </li>
+    <li>Address: Binghamton NY </li>
     <li><strong>Email: <a href="abc@gmail.com">Mail ID</a></strong></li>
     <form class ="" action="<a href="mailto:jigeeshajainms@gmail.com?subject=feedback">email me</a>" method="post"
     <label> Your name: </label>
